[project]
name = "chain-of-tools"
version = "0.1.0"
description = "End-to-end demo of interleaved thinking and fine-grained tool streaming with Claude"
dependencies = [
    "anthropic>=0.25.0",
    "sseclient-py",
    "pydantic",
    "python-dotenv",
    "ruff>=0.12.0",
]
requires-python = ">=3.8"

